[package]
name = "planetrs"
version = "0.1.0"
authors = ["Adau <adrien.aubourg@gmail.com>"]

[dependencies]
serde = "0.8"
serde_derive = "0.8"
serde_yaml = "0.5"
serde_json = "0.8.4"
chrono = {version = "0.2", features = ["serde"]}
curl = "0.4.1"
rss = "0.4.0"
atom_syndication = "0.3.0"
tera = "0.5.0"
uuid = { version = "0.3.1", features = ["v5"] }
zip = "0.2.0"
